test/cli/test-validating-policy/pss-disallow-privilege-escalation/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    # Windows pods are exempt: the Pod API rejects allowPrivilegeEscalation when
    # spec.os.name is windows, so PSA admits them with the field unset.
    - expression: >-
        object.spec.?os.?name.orValue('') == 'windows' ||
        (!has(object.spec.containers) || object.spec.containers.all(c,
          has(c.securityContext) &&
          has(c.securityContext.allowPrivilegeEscalation) &&
          c.securityContext.allowPrivilegeEscalation == false)) &&
        (!has(object.spec.initContainers) || object.spec.initContainers.all(c,
          has(c.securityContext) &&
          has(c.securityContext.allowPrivilegeEscalation) &&
          c.securityContext.allowPrivilegeEscalation == false)) &&
        (!has(object.spec.ephemeralContainers) || object.spec.ephemeralContainers.all(c,
          has(c.securityContext) &&
          has(c.securityContext.allowPrivilegeEscalation) &&
          c.securityContext.allowPrivilegeEscalation == false))
      message: >-
        Privilege escalation is disallowed. The fields
        spec.containers[*].securityContext.allowPrivilegeEscalation,
        spec.initContainers[*].securityContext.allowPrivilegeEscalation,
        and spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation
        must be set to `false`. Windows Pods are exempt.
